[metadata]
name = <mypkg>
author = <author>
author_email = <email>
description = Short description goes here
version = attr: <mypkg>.__version__
url = https://github.com/<github>/<mypkg>
keywords =
  # science
  # machine learning
  # something else
license_files =
  LICENSE

[options]
python_requires = >= 3.10.0
packages = find:
zip_safe = False
install_requires =
  # numpy
  # pandas
  # what else 
[options.extras_require]
test =
  pytest
  flake8
  # mypy
dev =
  black
  flake8
  isort
  nox
docs = 
  # sphinx maybe?
[options.entry_points]
console_scripts =
  # <mypkg>run = <mypkg>.module.filename:function_name
